Add language and gender selection with stats

--- a/game.html
+++ b/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <title>Survive - Game</title>
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1 id="welcome"></h1>
+    <div id="image" style="font-size:50px"></div>
     <div id="text"></div>
+    <div id="stats"></div>
     <div id="choices"></div>
     <button id="restart" onclick="restart()" style="display:none">Restart</button>
     <script src="game.js"></script>
